--- a/templates/base.html
+++ b/templates/base.html
@@ -66,10 +66,27 @@
             </div>
         </nav>
     </header>
-    {% block content %}
 
-    {% endblock %}
+    <section>
+        <!--Flash messages-->
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        {% for message in messages %}
+        <div class="row flashes">
+            <div class="col-sm-12 col-md-6 col-lg-4 alert alert-info mx-auto">
+                <h4 class="text-center">{{ message }}</h4>
+            </div>
+        </div>
+        {% endfor %}
+        {% endif %}
+        {% endwith %}
 
+    </section>
+    <main class="container">
+        {% block content %}
+
+        {% endblock %}
+    </main>
 
     <script src="/static/vendor/jQuery/jquery-3.5.1.min.js"></script>
     <script src="/static/vendor/bootstrap/js/bootstrap.min.js"></script>
