--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="{{ url_for('register') }}">Register</a></li>
-                                <li><a class="dropdown-item" href="#">Login</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('login') }}">Login</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
