--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
                             <a class="nav-link active" aria-current="page" href="{{ url_for('get_items') }}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Profile</a>
+                            <a class="nav-link" href="{{ url_for('profile', username=session['user']) }}">Profile</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">New Item</a>
