--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,7 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="{{ url_for('get_items') }}">Home</a>
                         </li>
+                        {% if session.user %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('profile', username=session['user']) }}">Profile</a>
                         </li>
@@ -43,25 +44,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Manage</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                User
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="{{ url_for('register') }}">Register</a></li>
-                                <li><a class="dropdown-item" href="{{ url_for('login') }}">Login</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Logout</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
+                        <a class="btn btn-primary mx-2" href="{{ url_for('logout') }}" role="button">Logout</a>
+                         {% else %}
+                        <a class="btn btn-primary mx-2" href="{{ url_for('login') }}" role="button">Login</a>
+                        <a class="btn btn-primary mx-2" href="{{ url_for('register') }}" role="button">Register</a>
+                        {% endif %}
                 </div>
             </div>
         </nav>
