--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
                             <a class="nav-link" href="{{ url_for('profile', username=session['user']) }}">Profile</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">New Item</a>
+                            <a class="nav-link" href="{{ url_for('add_item') }}">New Item</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Manage</a>
