Added items to and edited input fields

--- a/templates/add_item.html
+++ b/templates/add_item.html
@@ -6,17 +6,38 @@
 <div class="container">
     <div class="row">
         <form method="POST" action="">
-            <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <div class="row">
+                <div class="mb-3 col-12 col-md-8 col-lg-8">
+                    <label for="item_name" class="form-label">Title</label>
+                    <input type="text" minlength="5" maxlength="50" name="item_name" class="form-control" id="item_name"
+                        aria-describedby="emailHelp" required>
+                </div>
+                <div class="col-12 col-md-4 col-lg-4">
+                    <label for="category" class="form-label">Category</label>
+                    <select class="form-select" aria-label="Default select example">
+                        <option selected>Select a category</option>
+                        <option value="1">One</option>
+                        <option value="2">Two</option>
+                        <option value="3">Three</option>
+                    </select>
+                </div>
             </div>
             <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1">
+                <label for="item_description" class="form-label">Description</label>
+                <textarea class="form-control validate" minlength="5" maxlength="200" name="item_description"
+                    id="item_description" rows="3" required></textarea>
             </div>
-            <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <div class="row">
+                <div class="mb-3 col-12 col-md-2 col-lg-2">
+                    <label for="item_price" class="form-label">Price</label>
+                    <input type="text" minlength="5" maxlength="50" name="item_price" class="form-control" id="item_price"
+                        aria-describedby="emailHelp" required>
+                </div>
+                <div class="mb-3 col-12 col-md-10 col-lg-10">
+                    <label for="url" class="form-label">Where to find</label>
+                    <input type="text" minlength="5" name="url" class="form-control" id="url"
+                        aria-describedby="emailHelp" required>
+                </div>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
