--- a/templates/add_item.html
+++ b/templates/add_item.html
@@ -13,12 +13,13 @@
                         aria-describedby="emailHelp" required>
                 </div>
                 <div class="col-12 col-md-4 col-lg-4">
-                    <label for="category" class="form-label">Category</label>
-                    <select class="form-select" aria-label="Default select example">
+                    <label for="category_name" class="form-label">Category</label>
+                    <select id="category_name" name="category_name" class="form-select validate"
+                        aria-label="Default select example" required>
                         <option selected>Select a category</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
+                        {% for category in categories %}
+                            <option value="{{ category.category_name }}">{{ category.category_name }}</option>
+                        {% endfor %}
                     </select>
                 </div>
             </div>
@@ -30,8 +31,8 @@
             <div class="row">
                 <div class="mb-3 col-12 col-md-2 col-lg-2">
                     <label for="item_price" class="form-label">Price</label>
-                    <input type="text" minlength="5" maxlength="50" name="item_price" class="form-control" id="item_price"
-                        aria-describedby="emailHelp" required>
+                    <input type="text" minlength="5" maxlength="50" name="item_price" class="form-control"
+                        id="item_price" aria-describedby="emailHelp" required>
                 </div>
                 <div class="mb-3 col-12 col-md-10 col-lg-10">
                     <label for="url" class="form-label">Where to find</label>
