--- a/templates/add_item.html
+++ b/templates/add_item.html
@@ -5,7 +5,8 @@
 
 <div class="container">
     <div class="row">
-        <form method="POST" action="">
+        <form method="POST" action="{{ url_for('add_item') }}">
+            <!--Item name and category-->
             <div class="row">
                 <div class="mb-3 col-12 col-md-8 col-lg-8">
                     <label for="item_name" class="form-label">Title</label>
@@ -18,16 +19,20 @@
                         aria-label="Default select example" required>
                         <option selected>Select a category</option>
                         {% for category in categories %}
-                            <option value="{{ category.category_name }}">{{ category.category_name }}</option>
+                        <option value="{{ category.category_name }}">{{ category.category_name }}</option>
                         {% endfor %}
                     </select>
                 </div>
             </div>
-            <div class="mb-3">
-                <label for="item_description" class="form-label">Description</label>
-                <textarea class="form-control validate" minlength="5" maxlength="200" name="item_description"
-                    id="item_description" rows="3" required></textarea>
+            <!--Item description-->
+            <div class="row">
+                <div class="mb-3">
+                    <label for="item_description" class="form-label">Description</label>
+                    <textarea class="form-control validate" minlength="5" maxlength="200" name="item_description"
+                        id="item_description" rows="3" required></textarea>
+                </div>
             </div>
+            <!--Price and URL-->
             <div class="row">
                 <div class="mb-3 col-12 col-md-2 col-lg-2">
                     <label for="item_price" class="form-label">Price</label>
@@ -40,7 +45,20 @@
                         aria-describedby="emailHelp" required>
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <!--Image upload-->
+            <div class="row">
+                <div class="mb-3 col-12 col-md-12 col-lg-12">
+                    <label for="item_img" class="form-label">Image address</label>
+                    <input type="text" minlength="5" name="item_img" class="form-control" id="item_img"
+                        aria-describedby="emailHelp" required>
+                </div>
+            </div>
+            <!--Submit button-->
+            <div class="row">
+                <div class="mb-3">
+                    <button type="submit" class="btn btn-primary">Add!</button>
+                </div>
+            </div>
         </form>
     </div>
 </div>
