--- a/templates/items.html
+++ b/templates/items.html
@@ -15,7 +15,7 @@
                 <a href="{{ item.url }}" class="btn btn-primary" target="_blank">View</a>
                 {% if session.user|lower == item.created_by|lower %}
                     <a href="{{ url_for('edit_item', item_id=item._id) }}" class="btn btn-info">Edit</a>
-                    <a href="{{ item.url }}" class="btn btn-danger">Delete</a>
+                    <a href="{{ url_for('delete_item', item_id=item._id) }}" class="btn btn-danger">Delete</a>
                 {% endif %}
                 <p style="font-size: 10px;"><em>by {{ item.created_by }}</em></p>
             </div>
