--- a/templates/base.html
+++ b/templates/base.html
@@ -41,9 +41,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('add_item') }}">New Item</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Manage</a>
-                        </li>
+                            {% if session.user|lower == "admin"|lower %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('get_categories') }}">Manage</a>
+                            </li>
+                            {% endif %}
                         <a class="btn btn-primary mx-2" href="{{ url_for('logout') }}" role="button">Logout</a>
                          {% else %}
                         <a class="btn btn-primary mx-2" href="{{ url_for('login') }}" role="button">Login</a>
