--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,17 +1,23 @@
 {% extends "base.html" %}
 {% block content %}
 
+<div class="container">
+    <div class="row my-5 w-25 start-50 position-relative translate-middle-x">
+        <a href=" {{ url_for('add_category') }}" class="btn btn-primary w-3">Add new category</a>
+    </div>
+</div>
 
 
 <div class="container">
     <div class="row my-3">
         {% for category in categories %}
-        <div class="card m-3" style="width: 18rem;">
-            <img src="#" class="card-img-top pt-3" alt="product-img">
-            <div class="card-body">
-                <h5 class="card-title"><strong>{{ category.category_name }}</strong></h5>
-                <a href="#" class="btn btn-info">Edit</a>
-                <a href="#" class="btn btn-danger">Delete</a>
+        <div class="col-12 col-lg-3 col-md-4 mb-3 pt-3">
+            <div class="card h-100" style="width: 18rem;">
+                <div class="card-body p-5">
+                    <h5 class="card-title"><strong>{{ category.category_name }}</strong></h5>
+                    <a href="#" class="btn btn-info">Edit</a>
+                    <a href="#" class="btn btn-danger">Delete</a>
+                </div>
             </div>
         </div>
         {% endfor %}
