--- a/templates/items.html
+++ b/templates/items.html
@@ -6,18 +6,20 @@
 <div class="container">
     <div class="row my-3">
         {% for item in items %}
-        <div class="card m-3" style="width: 18rem;">
-            <img src="{{ item.item_img }}" class="card-img-top pt-3" alt="product-img">
-            <div class="card-body">
-                <h5 class="card-title"><strong>{{ item.item_name }}</strong></h5>
-                <p class="card-text">{{ item.item_description }}</p>
-                <p class="card-text"><strong>{{ item.item_price }}</strong></p>
-                <a href="{{ item.url }}" class="btn btn-primary" target="_blank">View</a>
-                {% if session.user|lower == item.created_by|lower %}
+        <div class="col-12 col-lg-3 col-md-4 mb-3 pt-3">
+            <div class="card h-100" style="width: 18rem;">
+                <img src="{{ item.item_img }}" class="card-img-top" alt="product-img">
+                <div class="card-body">
+                    <h5 class="card-title"><strong>{{ item.item_name }}</strong></h5>
+                    <p class="card-text">{{ item.item_description }}</p>
+                    <p class="card-text"><strong>{{ item.item_price }}</strong></p>
+                    <a href="{{ item.url }}" class="btn btn-primary" target="_blank">View</a>
+                    {% if session.user|lower == item.created_by|lower %}
                     <a href="{{ url_for('edit_item', item_id=item._id) }}" class="btn btn-info">Edit</a>
                     <a href="{{ url_for('delete_item', item_id=item._id) }}" class="btn btn-danger">Delete</a>
-                {% endif %}
-                <p style="font-size: 10px;"><em>by {{ item.created_by }}</em></p>
+                    {% endif %}
+                    <p style="font-size: 10px;"><em>by {{ item.created_by }}</em></p>
+                </div>
             </div>
         </div>
         {% endfor %}
