--- a/templates/categories.html
+++ b/templates/categories.html
@@ -15,7 +15,7 @@
             <div class="card h-100" style="width: 18rem;">
                 <div class="card-body p-5">
                     <h5 class="card-title"><strong>{{ category.category_name }}</strong></h5>
-                    <a href="#" class="btn btn-info">Edit</a>
+                    <a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn btn-info">Edit</a>
                     <a href="#" class="btn btn-danger">Delete</a>
                 </div>
             </div>
