--- a/templates/categories.html
+++ b/templates/categories.html
@@ -16,7 +16,7 @@
                 <div class="card-body p-5">
                     <h5 class="card-title"><strong>{{ category.category_name }}</strong></h5>
                     <a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn btn-info">Edit</a>
-                    <a href="#" class="btn btn-danger">Delete</a>
+                    <a href="{{ url_for('delete_category', category_id=category._id) }}" class="btn btn-danger">Delete</a>
                 </div>
             </div>
         </div>
