--- a/templates/items.html
+++ b/templates/items.html
@@ -3,6 +3,8 @@
 
 
 
+
+{% if items|length > 0 %}
 <div class="container">
     <div class="row my-3">
         {% for item in items %}
@@ -25,4 +27,10 @@
         {% endfor %}
     </div>
 </div>
+
+{% else %}
+
+<h3>No results found</h3>
+{% endif %}
+
 {% endblock %}
