--- a/templates/edit_item.html
+++ b/templates/edit_item.html
@@ -63,7 +63,7 @@
                     <!--Submit edit-->
                     <button type="submit" class="btn btn-info">Complete</button>
                     <!--Cancel edit-->
-                    <a href="{{ url_for('get_items') }}" class="btn btn-secondary">Cancel</a>
+                    <a href="javascript:history.back()" class="btn btn-secondary">Cancel</a>
                 </div>
             </div>
         </form>
