--- a/templates/categories.html
+++ b/templates/categories.html
@@ -12,7 +12,7 @@
     <div class="row my-3">
         {% for category in categories %}
         <div class="col-12 col-lg-3 col-md-4 mb-3 pt-3">
-            <div class="card h-100" style="width: 18rem;">
+            <div class="card h-100">
                 <div class="card-body p-5">
                     <h5 class="card-title"><strong>{{ category.category_name }}</strong></h5>
                     <a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn btn-info">Edit</a>
