--- a/templates/items.html
+++ b/templates/items.html
@@ -9,18 +9,18 @@
     <div class="row my-3">
         {% for item in items %}
         <div class="col-12 col-lg-3 col-md-4 mb-3 pt-3">
-            <div class="card h-100" style="width: 18rem;">
-                <img src="{{ item.item_img }}" class="card-img-top" alt="product-img">
-                <div class="card-body">
-                    <h5 class="card-title"><strong>{{ item.item_name }}</strong></h5>
+            <div class="card h-100">
+                <img src="{{ item.item_img }}" class="card-img-top" alt="product-image">
+                <div class="card-body d-flex flex-column">
+                    <h4 class="card-title"><strong>{{ item.item_name }}</strong></h4>
                     <p class="card-text">{{ item.item_description }}</p>
-                    <p class="card-text"><strong>{{ item.item_price }}</strong></p>
-                    <a href="{{ item.url }}" class="btn btn-primary" target="_blank">View</a>
-                    {% if session.user|lower == item.created_by|lower %}
-                    <a href="{{ url_for('edit_item', item_id=item._id) }}" class="btn btn-info">Edit</a>
-                    <a href="{{ url_for('delete_item', item_id=item._id) }}" class="btn btn-danger">Delete</a>
-                    {% endif %}
-                    <p style="font-size: 10px;"><em>by {{ item.created_by }}</em></p>
+                    <div class="items-button mt-auto">
+                        <div class="row">
+                            <p class="card-text"><strong>{{ item.item_price }}</strong></p>
+                        </div>
+                        <a href="{{ item.url }}" class="btn btn-primary" target="_blank">View</a>
+                        <p style="font-size: 10px;"><em>by {{ item.created_by }}</em></p>
+                    </div>
                 </div>
             </div>
         </div>
