--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,8 +4,38 @@
 <div class="row">
     <div class="col-12 col-md-6 col-lg-4 mx-auto my-3">
         <div class="card">
-                <h1 class="card-title text-center p-5">{{ username }}'s Profile</h1>
+            <h1 class="card-title text-center p-5">{{ username }}'s Profile</h1>
         </div>
     </div>
 </div>
+
+
+
+<div class="container">
+    <div class="row my-3">
+        {% for item in items %}
+        {% if session.user|lower == item.created_by|lower %}
+        <div class="col-12 col-lg-3 col-md-4 mb-3 pt-3">
+            <div class="card h-100">
+                <img src="{{ item.item_img }}" class="card-img-top" alt="product-image">
+                <div class="card-body d-flex flex-column">
+                    <h4 class="card-title"><strong>{{ item.item_name }}</strong></h4>
+                    <p class="card-text">{{ item.item_description }}</p>
+                    <div class="items-button mt-auto">
+                        <div class="row">
+                            <p class="card-text m-auto"><strong>{{ item.item_price }}</strong></p>
+                        </div>
+                        <a href="{{ item.url }}" class="btn btn-primary" target="_blank">View</a>
+                        <a href="{{ url_for('edit_item', item_id=item._id) }}" class="btn btn-info">Edit</a>
+                        <a href="{{ url_for('delete_item', item_id=item._id) }}" class="btn btn-danger">Delete</a>
+                        <p style="font-size: 10px;"><em>by {{ item.created_by }}</em></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endif %}
+        {% endfor %}
+    </div>
+</div>
+
 {% endblock %}
