--- a/templates/edit_item.html
+++ b/templates/edit_item.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h3 class="text-center">Edit item</h3>
+<p class="h1 text-center m-5">Edit item</p>
 
 <div class="container">
     <div class="row">
