--- a/templates/add_item.html
+++ b/templates/add_item.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h3 class="text-center">Add new item</h3>
+<p class="h1 text-center m-5">Add new item</p>
 
 <div class="container">
     <div class="row">
