--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,14 +1,15 @@
 {% extends "base.html" %}
 
-{% block content %}
-<div class="row">
-    <div class="col-12 col-md-6 col-lg-4 mx-auto my-3">
-        <div class="card">
-            <h1 class="card-title text-center p-5">{{ username }}'s Profile</h1>
-        </div>
-    </div>
-</div>
 
+
+
+
+{% block content %}
+<p class="h1 text-center m-5 profile-text">{{ username }}'s Profile</p>
+
+<div class="container">
+    <p>Create a new item<a href="{{ url_for('add_item') }}" class="btn btn-primary mx-2"><strong>+</strong></a></p>
+</div>
 
 
 <div class="container">
@@ -21,15 +22,17 @@
                 <div class="card-body d-flex flex-column">
                     <h4 class="card-title"><strong>{{ item.item_name }}</strong></h4>
                     <p class="card-text">{{ item.item_description }}</p>
-                    <div class="items-button mt-auto">
-                        <div class="row">
-                            <p class="card-text m-auto"><strong>{{ item.item_price }}</strong></p>
-                        </div>
-                        <a href="{{ item.url }}" class="btn btn-primary" target="_blank">View</a>
-                        <a href="{{ url_for('edit_item', item_id=item._id) }}" class="btn btn-info">Edit</a>
-                        <a href="{{ url_for('delete_item', item_id=item._id) }}" class="btn btn-danger">Delete</a>
-                        <p style="font-size: 10px;"><em>by {{ item.created_by }}</em></p>
+                    <div class="row mt-auto mb-2">
+                        <p class="card-text "><strong>{{ item.item_price }}</strong></p>
                     </div>
+
+                    <div class="items-button mx-auto">
+                        <a href="{{ item.url }}" class="btn btn-primary m-auto px-1" target="_blank">View</a>
+                        <a href="{{ url_for('edit_item', item_id=item._id) }}" class="btn btn-info m-auto">Edit</a>
+                        <a href="{{ url_for('delete_item', item_id=item._id) }}"
+                            class="btn btn-danger m-auto">Delete</a>
+                    </div>
+                        <p style="font-size: 12px;" class="mt-2"><em>by {{ item.created_by }}</em></p>
                 </div>
             </div>
         </div>
