--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,24 +17,48 @@ body {
     width: 100%;
     height: 10vw;
     object-fit: cover;
+    object-position: center;
 }
 
 .navbar-brand {
-    color: #fff!important;
-    font-size: 40px;font-weight: 600;
+    color: #0dcaf0!important;
+    font-size: 40px;
+    font-weight: 600;
+    transition: all ease-in-out 0.2s;
+}
+
+.navbar-brand:hover {
+    color: #006c81!important;
+    font-size: 40.5px;
 }
 
 .nav-item {
-    font-size: 18px;
+    font-size: 16px;
     margin-left: 1rem;
     margin-right: 1rem;
     transition: all ease-in-out 0.2s;
+    text-transform: uppercase;
 }
 
 .nav-item a:hover {
     font-weight: 600;
+    color: #0dcaf0!important;
 }
 
 .profile-text {
     text-transform: capitalize;
+}
+
+.hero-section {
+    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
+    width: auto;
+    background: url(../img/hero-2.jpg) center no-repeat;
+    background-size: cover;
+    margin-top: -86px;
+    z-index: -10;
+}
+
+body {
+    background-color: rgba(205, 92, 92, 0.2);
 }
