--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/static/vendor/bootstrap/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     {% block styles %}
 
     {% endblock %}
@@ -32,32 +33,35 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{{ url_for('get_items') }}">Home</a>
+                            <a class="nav-link active m-2" aria-current="page"
+                                href="{{ url_for('get_items') }}">Home</a>
                         </li>
                         {% if session.user %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('profile', username=session['user']) }}">Profile</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('add_item') }}">New Item</a>
-                            </li>
-                                {% if session.user|lower == "admin"|lower %}
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="{{ url_for('get_categories') }}">Manage</a>
-                                    </li>
-                                {% endif %}
-                            <form class="d-flex" action="{{ url_for('search') }}" method="POST">
-                                <input id="query" name="query" class="form-control me-2 validate" minlength="3"
-                                    type="search" placeholder="Search" aria-label="Search" required>
-                                <label for="query"></label>
-                                <button class="btn btn-outline-info" type="submit">Search</button>
-                            </form>
-                            <a class="btn btn-primary mx-2" href="{{ url_for('logout') }}" role="button">Logout</a>
-                            {% else %}
-                                <a class="btn btn-primary mx-2" href="{{ url_for('login') }}" role="button">Login</a>
-                                <a class="btn btn-primary mx-2" href="{{ url_for('register') }}" role="button">Register</a>
+                        <li class="nav-item">
+                            <a class="nav-link m-2"
+                                href="{{ url_for('profile', username=session['user']) }}">Profile</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link m-2" href="{{ url_for('add_item') }}">Create</a>
+                        </li>
+                        {% if session.user|lower == "admin"|lower %}
+                        <li class="nav-item">
+                            <a class="nav-link m-2" href="{{ url_for('get_categories') }}">Manage</a>
+                        </li>
                         {% endif %}
-
+                        <a class="btn btn-primary m-2 logout-btn" href="{{ url_for('logout') }}"
+                            role="button">Logout</a>
+                        {% else %}
+                        <a class="btn btn-primary m-2 login-btn" href="{{ url_for('login') }}" role="button">Login</a>
+                        <a class="btn btn-primary m-2 register-btn" href="{{ url_for('register') }}"
+                            role="button">Register</a>
+                        {% endif %}
+                        <form class="d-flex search-form m-2" action="{{ url_for('search') }}" method="POST">
+                            <input id="query" name="query" class="form-control me-2 validate" minlength="3"
+                                type="search" placeholder="Search" aria-label="Search" required>
+                            <label for="query"></label>
+                            <button class="btn btn-outline-info" type="submit">Search</button>
+                        </form>
                 </div>
             </div>
         </nav>
@@ -66,7 +70,7 @@
     {% block hero %}
     {% endblock %}
 
-    <section>
+    <section class="main-section">
         <!--Flash messages-->
         {% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -81,7 +85,7 @@
         {% endwith %}
 
     </section>
-    <main class="container">
+    <main class="container main">
         {% block content %}
 
         {% endblock %}
@@ -90,6 +94,20 @@
     <script src="/static/vendor/jQuery/jquery-3.5.1.min.js"></script>
     <script src="/static/vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        function aos_init() {
+            AOS.init({
+                duration: 400,
+                easing: "ease-in-out",
+                once: false,
+                mirror: false
+            });
+        }
+        $(window).on('load', function () {
+            aos_init();
+        });
+    </script>
     {% block scripts %}
 
     {% endblock %}
