--- a/templates/items.html
+++ b/templates/items.html
@@ -1,43 +1,15 @@
 {% extends "base.html" %}
+
 {% block content %}
 
-<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
-    <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
-    <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="..." class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-      </div>
-    </div>
-  </div>
-</div>
 
+<p class="h1 text-center m-5">Browse below some ideas for awesome gifts!</p>
 
 {% if items|length > 0 %}
 <div class="container">
     <div class="row my-3">
         {% for item in items %}
-        <div class="col-12 col-lg-3 col-md-4 mb-3 pt-3">
+        <div class="col-12 col-lg-3 col-md-4 mb-3 pt-3" data-aos="fade-up">
             <div class="card h-100">
                 <img src="{{ item.item_img }}" class="card-img-top" alt="product-image">
                 <div class="card-body d-flex flex-column">
@@ -48,7 +20,7 @@
                             <p class="card-text"><strong>{{ item.item_price }}</strong></p>
                         </div>
                         <a href="{{ item.url }}" class="btn btn-primary" target="_blank">View</a>
-                        <p style="font-size: 10px;"><em>by {{ item.created_by }}</em></p>
+                        <p style="font-size: 12px;"><em>by {{ item.created_by }}</em></p>
                     </div>
                 </div>
             </div>
