--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,14 +1,11 @@
 {% extends "base.html" %}
 
 
-
-
-
 {% block content %}
 <p class="h1 text-center m-5 profile-text">{{ username }}'s Profile</p>
 
 <div class="container">
-    <p>Create a new item<a href="{{ url_for('add_item') }}" class="btn btn-primary mx-2"><strong>+</strong></a></p>
+    <p class="h3">Create a new item<a href="{{ url_for('add_item') }}" class="btn btn-primary mx-2"><strong>+</strong></a></p>
 </div>
 
 
@@ -26,13 +23,13 @@
                         <p class="card-text "><strong>{{ item.item_price }}</strong></p>
                     </div>
 
-                    <div class="items-button mx-auto">
-                        <a href="{{ item.url }}" class="btn btn-primary m-auto px-1" target="_blank">View</a>
-                        <a href="{{ url_for('edit_item', item_id=item._id) }}" class="btn btn-info m-auto">Edit</a>
+                    <div class="btn-group" role="group" aria-label="Basic example">
+                        <a href="{{ item.url }}" class="btn btn-sm btn-outline-secondary m-auto px-1" target="_blank">View</a>
+                        <a href="{{ url_for('edit_item', item_id=item._id) }}" class="btn btn-sm btn-outline-info m-auto">Edit</a>
                         <a href="{{ url_for('delete_item', item_id=item._id) }}"
-                            class="btn btn-danger m-auto">Delete</a>
+                            class="btn btn-sm btn-danger m-auto">Delete</a>
                     </div>
-                        <p style="font-size: 12px;" class="mt-2"><em>by {{ item.created_by }}</em></p>
+                    <p style="font-size: 12px;" class="mt-2"><em>by {{ item.created_by }}</em></p>
                 </div>
             </div>
         </div>
