--- a/templates/add_item.html
+++ b/templates/add_item.html
@@ -29,7 +29,7 @@
                 <div class="mb-3">
                     <label for="item_description" class="form-label">Description</label>
                     <textarea class="form-control validate" minlength="5" maxlength="200" name="item_description"
-                        id="item_description" rows="3" placeholder="Tell me more" required></textarea>
+                        id="item_description" rows="3" placeholder="Tell me more"></textarea>
                 </div>
             </div>
             <!--Price and URL-->
