--- a/templates/items.html
+++ b/templates/items.html
@@ -3,15 +3,15 @@
 {% block content %}
 
 
-<p class="h1 text-center m-5">Browse below some ideas for awesome gifts!</p>
+<p class="h1 text-center m-5"><strong>Get ideas for some awesome gifts!</strong></p>
 
 {% if items|length > 0 %}
 <div class="container">
     <div class="row my-3">
         {% for item in items %}
-        <div class="col-12 col-lg-3 col-md-4 mb-3 pt-3" data-aos="fade-up">
-            <div class="card h-100">
-                <img src="{{ item.item_img }}" class="card-img-top" alt="product-image">
+        <div class="col-xl-3 col-lg-4 col-md-6 mb-3 pt-3" data-aos="fade-up">
+            <div class="card h-100 results-card">
+                <img src="{{ item.item_img }}" class="card-img-top img-fluid" alt="product-image">
                 <div class="card-body d-flex flex-column">
                     <h4 class="card-title"><strong>{{ item.item_name }}</strong></h4>
                     <p class="card-text">{{ item.item_description }}</p>
@@ -19,7 +19,7 @@
                         <div class="row">
                             <p class="card-text"><strong>{{ item.item_price }}</strong></p>
                         </div>
-                        <a href="{{ item.url }}" class="btn btn-primary" target="_blank">View</a>
+                        <a href="{{ item.url }}" class="btn btn-secondary" target="_blank">View</a>
                         <p style="font-size: 12px;"><em>by {{ item.created_by }}</em></p>
                     </div>
                 </div>
