--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,10 +2,10 @@
 
 
 {% block content %}
-<p class="h1 text-center m-5 profile-text">{{ username }}'s Profile</p>
+<p class="h1 text-center m-5 profile-text"><strong>{{ username }}'s Profile</strong></p>
 
 <div class="container">
-    <p class="h3">Create a new item<a href="{{ url_for('add_item') }}" class="btn btn-primary mx-2"><strong>+</strong></a></p>
+    <p class="h4">Create a new item<a href="{{ url_for('add_item') }}" class="btn btn-primary mx-2"><strong>+</strong></a></p>
 </div>
 
 
@@ -13,9 +13,9 @@
     <div class="row my-3">
         {% for item in items %}
         {% if session.user|lower == item.created_by|lower %}
-        <div class="col-12 col-lg-3 col-md-4 mb-3 pt-3">
-            <div class="card h-100">
-                <img src="{{ item.item_img }}" class="card-img-top" alt="product-image">
+        <div class="col-xl-3 col-lg-4 col-md-6 mb-3 pt-3" data-aos="fade-up">
+            <div class="card h-100 results-card">
+                <img src="{{ item.item_img }}" class="card-img-top img-fluid" alt="product-image">
                 <div class="card-body d-flex flex-column">
                     <h4 class="card-title"><strong>{{ item.item_name }}</strong></h4>
                     <p class="card-text">{{ item.item_description }}</p>
@@ -25,11 +25,10 @@
 
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <a href="{{ item.url }}" class="btn btn-sm btn-outline-secondary m-auto px-1" target="_blank">View</a>
-                        <a href="{{ url_for('edit_item', item_id=item._id) }}" class="btn btn-sm btn-outline-info m-auto">Edit</a>
+                        <a href="{{ url_for('edit_item', item_id=item._id) }}" class="btn btn-sm btn-outline-secondary m-auto">Edit</a>
                         <a href="{{ url_for('delete_item', item_id=item._id) }}"
-                            class="btn btn-sm btn-danger m-auto">Delete</a>
+                            class="btn btn-sm btn-outline-danger m-auto">Delete</a>
                     </div>
-                    <p style="font-size: 12px;" class="mt-2"><em>by {{ item.created_by }}</em></p>
                 </div>
             </div>
         </div>
